--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^10.12.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
     "vuetify": "^2.6.0"
